--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Glyph Tools</title>
+	<title>Mrchlldev | Glyph Tools</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
@@ -112,7 +112,7 @@
 			<div class="row justify-content-center">
 				<div class="col-md-8">
 					<div class="d-flex justify-content-center flex-wrap gap-3">
-						<a href="https://github.com/NhanAZ/glyph" class="text-decoration-none text-muted"
+						<a href="https://github.com/Mrchlldev/glyph" class="text-decoration-none text-muted"
 							target="_blank" rel="noopener noreferrer">
 							<i class="fab fa-github me-2"></i>Contribute on GitHub
 						</a>
@@ -120,11 +120,11 @@
 							target="_blank" rel="noopener noreferrer">
 							<i class="fas fa-book me-2"></i>Emojis & Symbols Docs
 						</a>
-						<a href="https://discord.gg/j2X83ujT6c" class="text-decoration-none text-muted" target="_blank"
+						<!--<a href="https://discord.gg/j2X83ujT6c" class="text-decoration-none text-muted" target="_blank"
 							rel="noopener noreferrer">
 							<i class="fab fa-discord me-2"></i>Join our Discord
-						</a>
-						<a href="https://github.com/NhanAZ" class="text-decoration-none text-muted" target="_blank"
+						</a>-->
+						<a href="https://github.com/Mrchlldev" class="text-decoration-none text-muted" target="_blank"
 							rel="noopener noreferrer">
 							<i class="fas fa-user me-2"></i>Author's GitHub Profile
 						</a>
